--- a/app/src/main/res/layout/activity_intent2.xml
+++ b/app/src/main/res/layout/activity_intent2.xml
@@ -7,4 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".Intent2">
 
+    <Button
+        android:id="@+id/result"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="결과"/>
+
 </LinearLayout>
