--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -9,5 +9,6 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
+        android:divider="@null"
         android:layout_height="wrap_content"/>
 </LinearLayout>
