--- a/app/src/main/res/layout/activity_realm.xml
+++ b/app/src/main/res/layout/activity_realm.xml
@@ -5,10 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".RealmActivity">
     
     <Button
+        android:id="@+id/button_save"
+        android:text="저장"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="100dp"/>
+
+    <Button
+        android:id="@+id/button_load"
+        android:text="불러오기"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
+
+    <Button
+        android:id="@+id/button_delete"
+        android:text="삭제"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
 
 </LinearLayout>
